data validation and try/catch controller functions modified
