# middleware/dataValidations/hospitalValidation.js
@@ -1,14 +1,23 @@
 const Validator = require("validatorjs");
 
+Validator.register(
+  "phone_format",
+  function (value) {
+    const regex = /^\+?[0-9\s\-]{7,20}$/;
+    return regex.test(value);
+  },
+  "The phone number format is invalid."
+);
+
 const hospitalRules = {
   name: "required|string|min:5|max:100",
   address: "required|string|min:5|max:200",
-  phone: "required|string|regex:^\\+?[0-9\\s\\-]{7,20}$",
+  phone: "required|string|phone_format",
   website: "string|url",
-  capacity: "numeric|min:0"
+  capacity: "required|string|min:0"
 };
 
-validateHospital = (req, res, next) => {
+const validateHospital = (req, res, next) => {
   const validation = new Validator(req.body, hospitalRules);
 
   if (validation.fails()) {
@@ -21,4 +30,4 @@ validateHospital = (req, res, next) => {
   next();
 };
 
-module.exports = {validateHospital};
+module.exports = { validateHospital };
